crates/ruma-events/tests/it/ui/12-no-relates_to.stderr
error: `without_relation` can only be used on events with a `relates_to` field
 --> tests/it/ui/12-no-relates_to.rs:6:48
  |
6 | #[derive(Clone, Debug, Deserialize, Serialize, EventContent)]
  |                                                ^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `EventContent` (in Nightly builds, run with -Z macro-backtrace for more info)
